--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,53 @@
+:root {
+    --color-blue: #0061ff;
+}
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar {
+    display: flex;
+    padding: 15px;
+}
+
+.nav-logo {
+    width: 100px;
+    padding: 10px;
+}
+
+.nav-logo img {
+    width: 100%;
+    display: block;
+    object-fit: contain;
+}
+
+.nav-link li {
+    display: inline-block ;
+    list-style: none;
+    padding: 10px;
+}
+
+.nav-link a {
+    text-decoration: none;
+    line-height: 18px;
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+}
+
+button {
+    border: none;
+    padding: 10px;
+    background-color: var(--color-blue);
+    color: #ffffff;
 }
