--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@ nav {
     justify-content: space-between;
 }
 
+h1 {
+    font-size: 70px;
+    padding-top: 25px;
+    padding-bottom: 50px;
+}
+
 .navbar {
     display: flex;
     padding: 15px;
@@ -45,9 +51,51 @@ nav {
     font-size: 14px;
 }
 
-button {
+.button {
     border: none;
     padding: 10px;
     background-color: var(--color-blue);
     color: #ffffff;
+}
+
+.container-large {
+    width: 1100px;
+    margin: auto;
+    position: relative;
+    top: 50px;
+}
+
+.bg-lightblue {
+    background-color: #B4D0E7;
+}
+
+.jumbotron {
+    display: flex;
+}
+
+.jumbotron-text {
+    flex-basis: 40%;
+    padding-right: 25px;
+}
+
+.jumbotron-text p {
+    padding-bottom: 25px;
+}
+
+.cancel {
+    padding-top: 25px;
+}
+
+.arrow {
+    font-size: 30px;
+    padding-top: 70px;
+}
+
+.jumbotron-img {
+    flex-basis: 60%;
+}
+
+.jumbotron-img img {
+    display: block;
+    width: 100%;
 }
