--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ nav {
     justify-content: space-between;
 }
 
+footer {
+    background-color: rgb(0, 0, 0);
+}
+
 h1 {
     font-size: 70px;
     padding-top: 25px;
@@ -221,7 +225,41 @@ img {
     flex-basis: 50%;
 }
 
+.col-title  h2{
+    padding-bottom: 0;
+}
+
 .col-button {
     flex-basis: 50%;
     text-align: end;
+}
+
+/* footer */
+.container-footer {
+    width: 1100px;
+    margin: auto;
+    color: #ffffff;
+    padding: 50px;
+}
+
+.foot-row {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 70px;
+}
+
+.foot-col li {
+    list-style: none;
+    padding-bottom: 15px;
+}
+
+.foot-col a {
+    text-decoration: none;
+    color: #D3D3D6;
+    font-size: 13px;
+}
+
+.language {
+    color: #999999;
+    font-size: 13px;
 }
