--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header {
+    background-color: #ffffff;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -56,7 +63,7 @@ img {
 }
 
 .nav-link li {
-    display: inline-block ;
+    display: inline-block;
     list-style: none;
     padding: 10px;
 }
@@ -77,14 +84,17 @@ img {
 
 /* main */
 .container {
-    width: 920px;
+    max-width: 920px;
     margin: auto;
     padding: 50px;
 }
 
 .container-large {
-    width: 1100px;
+    max-width: 1100px;
     margin: auto;
+}
+
+main .container-large {
     margin-bottom: 50px;
     position: relative;
     top: 50px;
