--- a/css/style.css
+++ b/css/style.css
@@ -241,14 +241,27 @@ main .container-large {
 }
 
 /* sezione6 */
+.company {
+    padding-top: 50px;
+}
+
 .grid-company {
+    max-width: 33.33%;
+    flex-shrink: 0;
     flex-wrap: wrap;
 }
 
 .grid-company div{
-    width: 50%;
+    max-width: 50%;
     flex-grow: 1;
     aspect-ratio: 1/1;
+    padding: 4vw;
+}
+
+.row-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .box-green {
@@ -286,11 +299,14 @@ main .container-large {
 
 .grid-company div img {
     filter: invert(1);
-    width: 50%;
 }
 
 .designt-company {
-    padding: 25px;
+    max-width: 33.33%;
+    flex-shrink: 0;
+    aspect-ratio: 1/1;
+    overflow: auto;
+    padding: 40px;
     font-size: 13px;
     background-color: #D3D3D6;
 }
@@ -315,7 +331,7 @@ main .container-large {
 
 /* sezione8 */
 .question {
-    padding: 100px 0;
+    padding: 100px 50px;
 }
 
 .question h2,
